Use our own Docker image for CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,4 @@
-image: python:latest
-
-variables:
-  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-
-cache:
-  paths:
-    - .cache/pip
-
-before_script:
-  - python -V  # Print out python version for debugging
-  - pip install requests
+image: registry.gitlab.com/mindthegapps/vendor_gapps:latest
 
 verify:
   script:
