--- a/overlay/GmsOverlay/AndroidManifest.xml
+++ b/overlay/GmsOverlay/AndroidManifest.xml
@@ -2,5 +2,6 @@
     package="com.mtg.gmsoverlay"
     android:versionCode="1"
     android:versionName="1.0">
+    <application android:hasCode="false" />
     <overlay android:targetPackage="android" android:priority="1337" android:isStatic="true" />
 </manifest>
