--- a/overlay/GmsSettingsProviderOverlay/AndroidManifest.xml
+++ b/overlay/GmsSettingsProviderOverlay/AndroidManifest.xml
@@ -2,5 +2,6 @@
     package="com.mtg.gmssettingsprovideroverlay"
     android:versionCode="1"
     android:versionName="1.0">
+    <application android:hasCode="false" />
     <overlay android:targetPackage="com.android.providers.settings" android:priority="1337" android:isStatic="true" />
 </manifest>
